--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-haptics": "~12.4.0",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-ui-lib": "^7.10.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-haptics": "~12.4.0"
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
